[metadata]
name = pytest_pyramid
version = 0.3.3
url = http://github.com/fizyk/pytest_pyramid
description = pytest_pyramid - provides fixtures for testing pyramid applications with pytest test suite
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = pyramid, pytest, testing
license = MIT License
author = Grzegorz Śliwiński
author_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Pyramid
    Framework :: Pytest
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Unit

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:
package_dir =
    =src
install_requires =
    pytest
    pyramid
    webtest

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest-cov

[pycodestyle]
max-line-length = 80
exclude = build/*,venv/*

[pydocstyle]
ignore = D203,D212
match = '(?!build|venv).*\.py'

[tool:pytest]
xfail_strict=True
addopts = --pc tests/pyramid.test.ini --showlocals --verbose --cov pytest_pyramid --cov tests
testpaths = tests
